--- a/src/ErrorResponseFormatter/ErrorResponseFormatter.csproj
+++ b/src/ErrorResponseFormatter/ErrorResponseFormatter.csproj
@@ -6,6 +6,8 @@
     </PropertyGroup>
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="FluentValidation" Version="10.2.3" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="10.2.3" />
     </ItemGroup>
 
 </Project>
