--- a/src/ErrorResponseFormatter/ErrorResponseFormatter.csproj
+++ b/src/ErrorResponseFormatter/ErrorResponseFormatter.csproj
@@ -3,6 +3,14 @@
     <PropertyGroup>
         <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
         <LangVersion>9</LangVersion>
+        <PackageId>ErrorResponseFormatter</PackageId>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Version>1.0.0</Version>
+        <Authors>Rafael Miranda</Authors>
+        <Description>ASPNET's MVC error response formatter</Description>
+        <RepositoryUrl>https://github.com/rafaelpadovezi/ErrorResponseFormatter</RepositoryUrl>
+        <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
