fix: nuget config

--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -26,7 +26,7 @@ jobs:
           ./scripts/start-sonarcloud.sh ${{ secrets.SONAR_TOKEN }} ${{ github.sha }}
       - name: Generate package
         run: |
-          dotnet pack ./src/ErrorResponseFormatter -c Release
+          dotnet pack ./src/ErrorResponseFormatter -c Release -o out
       - name: Push nuget
         run: |
-          dotnet nuget push *.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source ${{ secrets.NUGET_SERVER }} --skip-duplicate
+          dotnet nuget push out/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source ${{ secrets.NUGET_SERVER }} --skip-duplicate
