feature: remove property

--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -26,7 +26,7 @@ jobs:
           ./scripts/start-sonarcloud.sh ${{ secrets.SONAR_TOKEN }} ${{ github.sha }}
       - name: Generate package
         run: |
-          dotnet pack ./src/ErrorResponseFormatter -c Release -o out
+          dotnet pack ./src/ErrorResponseFormatter -c Release -o out -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
       - name: Push nuget
         run: |
           dotnet nuget push out/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source ${{ secrets.NUGET_SERVER }} --skip-duplicate
