--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup dotnet 2.2 # https://github.com/actions/virtual-environments/issues/975
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '2.2.x'
       - name: Install dotnet-sonarscanner
         run: |
           dotnet tool install --global dotnet-sonarscanner
